--- a/Solar_Panel_Forecasting.ipynb
+++ b/Solar_Panel_Forecasting.ipynb
@@ -1029,12 +1029,16 @@
     "for f in forecasting_data.iloc[:,1:7]:\n",
     "    fig = plt.figure(figsize=(4,2))\n",
     "    sns.boxplot(forecasting_data[f], color=colours[c], orient='h')\n",
+    "    # get the current axis\n",
     "    ax = plt.gca()\n",
+    "    # label the x axis for each plot\n",
     "    if f == 'Monthly Power Generation':\n",
     "        ax.set_xlabel(f'{f} (kWh)')\n",
     "    else:\n",
     "        ax.set_xlabel(f)   \n",
+    "    # hide the y axis    \n",
     "    ax.yaxis.set_visible(False)\n",
+    "    # add titles\n",
     "    plt.title(f)\n",
     "    c+=1\n",
     "    "
@@ -1246,6 +1250,7 @@
     "\n",
     "# test p values for the correlations with Monthly Power Generation\n",
     "for v in exog_vars: \n",
+    "    # calculate sc for the variables with the target and create a df to display them \n",
     "    corr, p_value = stats.spearmanr(forecasting_data['Monthly Power Generation'], forecasting_data[v])\n",
     "    spear_corr_dict[\"Spearman's Correlation\"].append(round(corr,4))\n",
     "    spear_corr_dict['p-value'].append(round(p_value,6))\n",
@@ -2149,9 +2154,11 @@
     "\n",
     "# function to test SARIMAX models \n",
     "def test_sarimax_models(data, d, D):\n",
-    "    model = pm.auto_arima(data['Monthly Power Generation'], exogenous=[data['Sun Hours'], data['Mean Monthly Temperature'],\n",
-    "                                                                      data['No. Frost Days'], data['Rain mm']],\n",
-    "                           d=d, start_p=0, start_q=0, seasonal=True, m=12, D=D, start_P=0, start_Q=0, information_criterion='aic',\n",
+    "    model = pm.auto_arima(data['Monthly Power Generation'], exogenous=[data['Sun Hours'],\n",
+    "                                                            data['Mean Monthly Temperature'],\n",
+    "                                                            data['No. Frost Days'], data['Rain mm']],\n",
+    "                           d=d, start_p=0, start_q=0, seasonal=True, m=12, D=D, start_P=0, start_Q=0, \n",
+    "                          information_criterion='aic',\n",
     "                           trace=True, error_action='ignore', stepwise=True)\n",
     "    return model\n"
    ]
@@ -3183,7 +3190,8 @@
    "source": [
     "\n",
     "def lagged_dataset(df, start_lag, total_lags, target):\n",
-    "    '''Take a time series and create columns for the lagged features in order to frame as a supervised learning dataset in order\n",
+    "    '''Take a time series and create columns for the lagged features in order to \n",
+    "    frame as a supervised learning dataset in order\n",
     "    to use an XGB model'''\n",
     "    cols_to_drop = []\n",
     "    lagged_columns = []\n",
@@ -3197,9 +3205,11 @@
     "            lagged_columns.append(lagged_column)\n",
     "            \n",
     "        # if the feature is not the target, drop it from the df\n",
+    "        # dont want the current feature values in the model\n",
+    "        # target remains for now to test model later\n",
     "        if feature != target:\n",
     "            cols_to_drop.append(feature)\n",
-    "            \n",
+    "    # drop the specified columns        \n",
     "    df.drop(cols_to_drop, axis = 1, inplace=True)\n",
     "    \n",
     "    # combine the lagged columns\n",
@@ -3391,7 +3401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grid search for best model\n",
+    "# random search for best model\n",
     "r_search = RandomizedSearchCV(estimator=xgb_r, cv=ts_split, param_distributions=parameters, scoring='neg_root_mean_squared_error', n_iter=500)\n",
     "\n",
     "xgb_model = r_search.fit(X_train, y_train)"
@@ -3572,7 +3582,7 @@
    "source": [
     "# use the same XGBregressor and the parameters defined above to test models with the normalised training test\n",
     "\n",
-    "# grid search for best model\n",
+    "# random search for best model\n",
     "norm_r_search = RandomizedSearchCV(estimator=xgb_r, cv=ts_split, param_distributions=parameters, scoring='neg_root_mean_squared_error', n_iter=500)\n",
     "\n",
     "norm_xgb_model = norm_r_search.fit(X_train_normed, y_train_normed)"
@@ -3641,7 +3651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# unnormalise the xgb predictions\n",
+    "# unnormalise the xgb predictions to view on original scale\n",
     "rescaled_xgb_predictions = norm.inverse_transform(norm_xgb_predictions.reshape(-1,1))"
    ]
   },
@@ -3885,7 +3895,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data for typerparameter tuning \n",
+    "# data for hyperparameter tuning \n",
     "# change dtype of x_train and y_train to float32\n",
     "\n",
     "X_train = X_train.float()\n",
@@ -4336,7 +4346,8 @@
     "        self.lstm = nn.LSTM(\n",
     "        input_size, \n",
     "        hidden_size,\n",
-    "        num_layers,  \n",
+    "        num_layers,\n",
+    "        # set batch dimension as the first dimension    \n",
     "        batch_first = True)\n",
     "        # output size - the number of outputs from the network (aka 12)\n",
     "        self.output_size = output_size\n",
@@ -4365,7 +4376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set input and outputsize \n",
+    "# set input and output size \n",
     "# set dummy values for hidden_size and num_layers\n",
     "input_size = 5\n",
     "hidden_size = 1\n",
@@ -4538,7 +4549,7 @@
    "outputs": [],
    "source": [
     "# call the model, sending the best hyperparameter values\n",
-    "model = Net(input_size, hidden_size, output_size, num_layers)\n"
+    "model = Net(input_size, hidden_size, output_size, num_layers)"
    ]
   },
   {
@@ -4570,7 +4581,7 @@
     "for epoch in range(epochs): \n",
     "    '''for each itteration of the network (epoch), loop through the data loader'''\n",
     "    for seqs, labels in train_dataloader: \n",
-    "        #print(seqs.shape)\n",
+    "        # reshape the labels tensor\n",
     "        labels = labels.squeeze()\n",
     "        #print(labels.shape)\n",
     "        # expand tensor to the correct shape \n",
@@ -4583,6 +4594,7 @@
     "        # set gradients of model parameters to 0\n",
     "        optimiser.zero_grad()\n",
     "        \n",
+    "        # run the criterion to calculate mseloss\n",
     "        loss = criterion(pred, labels)\n",
     "        # run backward propagation\n",
     "        loss.backward()\n",
@@ -4623,6 +4635,7 @@
     "rmse = torchmetrics.MeanSquaredError(squared=False)\n",
     "\n",
     "# set to evaluation mode\n",
+    "# uses the now trained model\n",
     "model.eval()\n",
     "\n",
     "# compute the mse for the training set\n",
